--- a/Part1/index.html
+++ b/Part1/index.html
@@ -33,7 +33,12 @@
     <span>Player </span>
     <span id="player">X</span>
     <span>'s turn</span>
+    
+
   </main>
+
+<script src='./index.js'></script>
+
 </body>
 
 </html>
